# moneyball

./: README.md
backend/: .env  .env.example  .gitignore  alembic_error.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  2026_03_28_2321-44569a319500_add_role_index_to_users.py  2026_03_29_0706-5feabb822c4c_complete_store_policies_table.py  2026_03_29_0724-fb527e52428b_add_product_indexes.py  2026_03_29_0830-c4d8e9f0a1b3_retailer_strategy_on_store_policies.py
backend/app/: main.py
backend/app/core/: security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  product.py  store_policy.py  user.py
backend/app/routers/: auth.py  deals.py  products.py  stores.py  users.py
backend/app/schemas/: auth.py  deal.py  product.py  store.py  store_strategy.py  user.py
backend/app/services/: auth_service.py  deal_service.py  product_service.py  risk_engine.py  store_service.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(consumer)/: layout.tsx
frontend/src/app/(retailer)/: layout.tsx
frontend/src/components/retailer/: CSVUploader.tsx  DealListingCard.tsx  DealSuggestionCard.tsx  ProductForm.tsx  ProductTable.tsx  RiskBadge.tsx  StoreSetupWizard.tsx
frontend/src/hooks/: useAuth.ts  useDeals.ts  useProducts.ts  useStore.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts  deal.ts  product.ts  store.ts
(+14 files in other folders)
