[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "geoalchemy2>=0.15.1",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.7.1",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "resend>=0.7.2",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.29.0",
]
